增加菜单接口
