# service/api/menu.go
@@ -1,0 +1,111 @@
+package api
+
+import (
+	"GoModDemo/consts"
+	// "GoModDemo/model"
+	"GoModDemo/bill"
+	"GoModDemo/util"
+	"net/http"
+	// "time"
+	// "github.com/google/uuid"
+	"encoding/json"
+	"github.com/gin-gonic/gin"
+	"strconv"
+)
+// GetMenuByID 根据菜单ID获取菜单信息
+// @Summary 根据菜单ID获取菜单信息
+// @Tags Menu
+// @Description 根据菜单ID获取菜单信息 请求主体: base64(ID=aaaa) 成功输出Menu
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param ID formData string true "ID"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{Menu},"Message":""} or {"Code":-1,"Data":{},"Message":"错误提示"}"
+// @Router  /GetMenuByID [post]
+func GetMenuByID(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "根据菜单ID获取菜单信息错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	ID := dists["ID"][0]
+	if ID == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+	user, err := bill.GetMenuByID(ID)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	b, err := json.Marshal(*user)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	s := string(b)
+	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
+
+}
+
+// GetAllMenuInfo 前台条件获取菜单信息
+// @Summary 前台条件获取菜单信息
+// @Tags Menu
+// @Description 前台条件获取菜单信息 请求主体: base64(ParameterStr=aaaa&PageSize=10&CurrentPage=1) 成功输出[]Menu
+// @Accept mpfd
+// @Param Token formData string true "Token"
+// @Param ParameterStr formData string true "ParameterStr"
+// @Param PageSize formData int true "PageSize"
+// @Param CurrentPage formData int true "CurrentPage"
+// @Produce  json
+// @Success 200 {string} json "{"Code":1,"Data":{[]Menu},"Message":""} or {"Code":-1,"Data":{},"Menu":"错误提示"}"
+// @Router  /GetAllMenuInfo [post]
+func GetAllMenuInfo(c *gin.Context) {
+	appG := util.Gin{C: c}
+	defer func() {
+		if p := recover(); p != nil {
+			appG.Response(http.StatusOK, consts.ERROR, "错误", nil)
+		}
+	}()
+	dists, err := appG.ParseQuery()
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "数据包解密失败", nil)
+		return
+	}
+	ParameterStr := dists["ParameterStr"][0]
+	PageSize := dists["PageSize"][0]
+	CurrentPage := dists["CurrentPage"][0]
+	pageSize, err := strconv.Atoi(PageSize)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "参数异常", nil)
+		return
+	}
+	currentPage, err := strconv.Atoi(CurrentPage)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, "参数异常", nil)
+		return
+	}
+	if ParameterStr == "" {
+		appG.Response(http.StatusOK, consts.ERROR, "参数为空", nil)
+		return
+	}
+
+	data, err := bill.GetAllMenuInfo(ParameterStr, pageSize, currentPage)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	b, err := json.Marshal(*data)
+	if err != nil {
+		appG.Response(http.StatusOK, consts.ERROR, err.Error(), nil)
+		return
+	}
+	s := string(b)
+	appG.Response(http.StatusOK, consts.SUCCESS, "", s)
+}
